# cw-chess

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: Basic.yml  check.yml  release.yml
artifacts/: checksums.txt  cw_chess.wasm
src/: contract.rs  error.rs  game.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  state.rs  tests.rs
